test/typecheck/errors/bad-break.boa
o: output sum of int;
o << 1;

visit(input, visitor {
    before n: Statement -> {
        break;
    }
});
